--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I am hosted with Github Pages.</p>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Xiaoyang Li</title>
+		<style>
+		body 
+		{
+			background-image: url(img/背景2.jpg);
+			background-size: cover;
+		}
+		div.transbox
+		{
+		  width: 1050px;
+		  height: 420px;
+		  margin: 90px 90px;
+		  background-color: #ffffff;
+		  border: 1px solid #FFFFFF;
+		  opacity:0.8;
+		}
+		
+		h1 {text-align: center;}
+		h2.ex1 {margin-left:5cm;}
+		h3.ex1 {margin-left:5cm;}
+		img.ex1{margin-left:5cm;}
+		p{text-align: right;}
+		p.ex1{margin-right: 2cm;}
+		p{color:mediumpurple}
+		
+		/*cc:change color*/
+		a.cc:visited {color:#0000ff;}
+		a.cc:hover {color:#ffcc00;}
+		</style>
+	</head>
+	<body>
+		<div class="background">
+		<div class="transbox">
+			
+			<h1>个人简介</h1>
+			<img src="img/头像.jpg" height="50px" width="50px" class="ex1" />
+			<h2 class="ex1">I'm Xiaoyang Li, a second-year Master degree candidate in the University of Science and Technology of China (USTC), supervised by Prof. Tianzhu Zhang and Prof. Jianhua Tao. I received my bachelor degree in the Department of Automation from Tsinghua University in 2021.</h2>
+			<h3 class="ex1">Email: xiaoyangtsc@mail.ustc.edu.cn</h3>
+			<h3 class="ex1">Address: Haidian District, Beijing</h3>
+			<p class="ex1">Research areas: Reinforcement Learning, Multi-Agent Reinforcement Learning</p>
+		</div>
+		</div>
+		<embed height="50" width="100" src="bgm/Sunburst.mp3">
+	</body>
 </html>
