--- a/index.html
+++ b/index.html
@@ -4,16 +4,6 @@
 		<meta charset="utf-8">
 		<title>Xiaoyang Li</title>
 		<style>
-		div.transbox
-		{
-		  width: 1050px;
-		  height: 420px;
-		  margin: 90px 90px;
-		  background-color: #ffffff;
-		  border: 1px solid #FFFFFF;
-		  opacity:0.8;
-		}
-		
 		h1 {text-align: center;}
 		h2.ex1 {margin-left:5cm;}
 		h3.ex1 {margin-left:5cm;}
@@ -22,23 +12,15 @@
 		p.ex1{margin-right: 2cm;}
 		p{color:mediumpurple}
 		
-		/*cc:change color*/
-		a.cc:visited {color:#0000ff;}
-		a.cc:hover {color:#ffcc00;}
 		</style>
 	</head>
 	<body>
-		<div class="background">
-		<div class="transbox">
 			
-			<h1>个人简介</h1>
-			<img src="img/头像.jpg" height="50px" width="50px" class="ex1" />
-			<h2 class="ex1">I'm Xiaoyang Li, a second-year Master degree candidate in the University of Science and Technology of China (USTC), supervised by Prof. Tianzhu Zhang and Prof. Jianhua Tao. I received my bachelor degree in the Department of Automation from Tsinghua University in 2021.</h2>
-			<h3 class="ex1">Email: xiaoyangtsc@mail.ustc.edu.cn</h3>
-			<h3 class="ex1">Address: Haidian District, Beijing</h3>
-			<p class="ex1">Research areas: Reinforcement Learning, Multi-Agent Reinforcement Learning</p>
-		</div>
-		</div>
-		<embed height="50" width="100" src="bgm/Sunburst.mp3">
+		<h1>Xiaoyang Li</h1>
+		<img src="img/head.jpg" height="50px" width="50px" class="ex1" />
+		<h2 class="ex1">I'm Xiaoyang Li, a second-year Master degree candidate in the University of Science and Technology of China (USTC), supervised by Prof. Tianzhu Zhang and Prof. Jianhua Tao. I received my bachelor degree in the Department of Automation from Tsinghua University in 2021.</h2>
+		<h3 class="ex1">Email: xiaoyangtsc@mail.ustc.edu.cn</h3>
+		<h3 class="ex1">Address: Haidian District, Beijing, China</h3>
+		<h3 class="ex1">Research areas: Reinforcement Learning, Multi-Agent Reinforcement Learning</h3>
 	</body>
 </html>
